2008-05-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.c (Qdefault_directory): New var.
	(file_name_completion): Use it instead of Fexpand_file_name.
	(syms_of_dired): Initialize it.

2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (double_dollars): Remove dead code.

2008-05-10  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (Ffile_attributes, Fdirectory_files_and_attributes):
	Mention w32-get-true-file-attributes in doc string.

	* w32proc.c (syms_of_ntproc) <w32-get-true-file-attributes>: Doc fix.

2008-05-09  Glenn Morris  <rgm@gnu.org>

	* fileio.c (Fread_file_name): Remove reference to insdef, deleted
	2008-04-23.

2008-05-09  Eli Zaretskii  <eliz@gnu.org>

	Support for reporting owner and group of each file on MS-Windows:
	* dired.c (stat_uname, stat_gname): New functions, with special
	implementation for w32.
	(Ffile_attributes): Use them instead of getpwuid and getgrgid.

	* w32.c: Rename the_passwd_* to dflt_passwd_*.
	(dflt_group_name): New static variable.
	(dflt_group): Rename from the_group.
	(init_user_info): Init dflt_group fields.  Get user's group name
	from LookupAccountSid.
	(g_b_init_get_file_security, g_b_init_get_security_descriptor_owner)
	(g_b_init_get_security_descriptor_group, g_b_init_is_valid_sid):
	New initialization states.
	(globals_of_w32): Initialize them to zero.  Initialize the default
	group name to "None".
	(GetFileSecurity_Name): New global var, the name of the function
	to call for GetFileSecurity.
	(GetFileSecurity_Proc, GetSecurityDescriptorOwner_Proc)
	(GetSecurityDescriptorGroup_Proc, IsValidSid_Proc): New typedefs.
	(get_file_security, get_security_descriptor_owner)
	(get_security_descriptor_group, is_valid_sid)
	(get_file_security_desc, get_rid, get_name_and_id)
	(get_file_owner_and_group): New functions.
	(stat): Use get_file_security_desc and get_file_owner_and_group to
	report the owner and primary group of each file.  Don't ignore the